// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackButton snapshot matches the snapshot when iconOnly=false 1`] = `
<div>
  <div
    class="h-100 flex ai-center border border-all_lg border-thin rounded-4 border-secondary-positive p-8_lg"
  >
    <button
      data-testid="mock-button"
      size="32"
      title="Ir atrás"
      variant="link"
    >
      <div
        data-icon-size="20"
        data-testid="mock-icon"
      >
        <i
          class="text-primary-positive"
          data-testid="mock-iconsprite"
          name="arrow-left"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`BackButton snapshot matches the snapshot when iconOnly=true 1`] = `
<div>
  <div
    class="h-100 flex ai-center border border-all_lg border-thin rounded-4 border-secondary-positive p-8_lg"
  >
    <button
      data-testid="mock-button"
      size="32"
      title="Ir atrás"
      variant="secondary"
    >
      <div
        data-icon-size="20"
        data-testid="mock-icon"
      >
        <i
          class="text-primary-positive"
          data-testid="mock-iconsprite"
          name="arrow-left"
        />
      </div>
    </button>
  </div>
</div>
`;
